--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,9 +42,9 @@
 
 	.loading-skeleton {
 		background: linear-gradient(90deg, 
-			theme('colors.neutral.light') 25%, 
-			theme('colors.neutral.DEFAULT') 50%, 
-			theme('colors.neutral.light') 75%
+			rgb(var(--tw-colors-neutral-light) / 1) 25%, 
+			rgb(var(--tw-colors-neutral-DEFAULT) / 1) 50%, 
+			rgb(var(--tw-colors-neutral-light) / 1) 75%
 		);
 		background-size: 200% 100%;
 		animation: shimmer 1.5s infinite;
