--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import githubIcon from '../assets/github_icon.webp';
 import agplv3Icon from '../assets/agplv3_icon.png';
 ---
 
-<footer class="bg-white/80 backdrop-blur-sm shadow-sm border-t border-neutral mt-8">
+<footer class="bg-white/80 backdrop-blur-xs shadow-xs border-t border-neutral mt-8">
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
 		<div class="flex items-center space-x-4">
 			<a href="https://edbpede.net" target="_blank" rel="noopener noreferrer" class="flex items-center">
