--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@config '../../tailwind.config.js';
+@config '../../tailwind.config.mjs';
 
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
